--- a/upload-sdk-version/action.yml
+++ b/upload-sdk-version/action.yml
@@ -16,6 +16,9 @@ inputs:
     description: "If true, validates if the request should and could be done"
     required: false
     default: 'false'
+  sdkVersionUrl:
+    description: "Base URL for SDK version publishing"
+    required: true
 
 runs:
   using: "composite"
@@ -33,17 +36,17 @@ runs:
       if: inputs.dryRun == 'true'
       shell: bash
       run: |
-        echo "🔍 Validating token with SDK_VERSION_URL=${{ vars.SDK_VERSION_URL }}"
-        curl -f "${{ vars.SDK_VERSION_URL }}/check-token/" \
-          -H "X-Embrace-CI: ${{ secrets.SDK_VERSION_TOKEN }}"
+        echo "Validating token"
+        curl -f "${{ inputs.sdkVersionUrl }}/check-token/" \
+          -H "X-Embrace-CI: $SDK_VERSION_TOKEN"
 
     - name: Publish version
       if: inputs.dryRun != 'true'
       shell: bash
       run: |
         echo "Publishing the version ${{ inputs.version }} for the ${{ inputs.platform }} SDK"
-        curl -f -X POST "${{ vars.SDK_VERSION_URL }}/${{ inputs.platform }}/version/" \
-          -H "X-Embrace-CI: ${{ secrets.SDK_VERSION_TOKEN }}" \
+        curl -f -X POST "${{ inputs.sdkVersionUrl }}/${{ inputs.platform }}/version/" \
+          -H "X-Embrace-CI: $SDK_VERSION_TOKEN" \
           -H "Content-Type: application/json" \
           -d '{"version": "${{ inputs.version }}"}'
 
