--- a/.github/workflows/test-upload-sdk-version.yml
+++ b/.github/workflows/test-upload-sdk-version.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Test action from commit
         uses: embrace-io/public-actions/upload-sdk-version@v1 # testing the latest
         with:
-          platform: {{ inputs.platform }}
-          version: {{ inputs.version }}
-          dryRun: {{ inputs.dryRun }}
+          platform: ${{ inputs.platform }}
+          version: ${{ inputs.version }}
+          dryRun: ${{ inputs.dryRun }}
           sdkVersionUrl: ${{ vars.SDK_VERSION_URL }}
         env:
           SDK_VERSION_TOKEN: ${{ secrets.SDK_VERSION_TOKEN }}
