--- a/.github/workflows/test-upload-sdk-version.yml
+++ b/.github/workflows/test-upload-sdk-version.yml
@@ -26,6 +26,6 @@ jobs:
           platform: ${{ inputs.platform }}
           version: ${{ inputs.version }}
           dryRun: ${{ inputs.dryRun }}
-          sdkVersionUrl: ${{ vars.SDK_VERSION_URL }}
+          uploadUrl: ${{ vars.SDK_VERSION_URL }}
         env:
           SDK_VERSION_TOKEN: ${{ secrets.SDK_VERSION_TOKEN }}
