--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+# OS files
 .DS_Store
+Thumbs.db
+
+# Dependencies
+node_modules/
+
+# Test coverage
+coverage/
+
+# Jest cache
+.jest/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
