--- a/.github/workflows/test-pr-title-formatter.yml
+++ b/.github/workflows/test-pr-title-formatter.yml
@@ -11,5 +11,8 @@ jobs:
       pull-requests: write
       contents: read
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Format PR title
         uses: ./pr-title-formatter
